--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,33 @@
-asgiref==3.4.1
+asgiref==3.6.0
+attrs==22.2.0
+branca==0.6.0
+certifi==2022.12.7
+charset-normalizer==3.0.1
+coverage==7.1.0
+dj-database-url==1.2.0
 Django==3.2.18
+exceptiongroup==1.1.0
+flake8==5.0.4
+folium==0.14.0
+idna==3.4
+importlib-metadata==4.2.0
+iniconfig==2.0.0
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+mccabe==0.7.0
+numpy==1.21.6
+packaging==23.0
+pluggy==1.0.0
+psycopg2-binary==2.9.5
+pycodestyle==2.9.1
+pyflakes==2.5.0
+pytest==7.2.1
+pytest-django==4.5.2
 python-decouple==3.7
 pytz==2022.7.1
+requests==2.28.2
 sqlparse==0.4.3
-typing_extensions==4.1.1
-psycopg2-binary==2.9.5
-dj-database-url==1.2.0
-flake8-4.0.1
-pytest==7.0.1
-pytest-django==4.5.2
-coverage==6.2
+tomli==2.0.1
+typing_extensions==4.5.0
+urllib3==1.26.14
+zipp==3.13.0
