docker-compose setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
     depends_on:
       - postgres
     command: wait-for-it postgres:5432 -- python manage.py runserver 0.0.0.0:8000
+    volumes:
+    - .:/app
 
   postgres:
     image: postgres
